# carwatch-python

./: .gitignore  .prospector.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  _tasks.py  generate_labels.py  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  test-and-lint.yml
carwatch/: __init__.py  example_data.py  generate_labels.py  generate_labels_example.py
carwatch/examples/: generate_labels.py  generate_qr_code.py
carwatch/labels/: __init__.py  barcode_template.tex  label_generator.py  print_layout.py  utils.py
carwatch/logs/: __init__.py  _participant_logs.py  _study_logs.py  _utils.py
carwatch/qr_codes/: __init__.py  study_qr_generator.py
carwatch/scripts/: __init__.py  prepare_study.py
carwatch/utils/: __init__.py  _datatype_validation_helper.py  _types.py  click_helper.py  exceptions.py  study.py  utils.py
docs/: CNAME  Gemfile  _config.yml  conf.py  index.md  index.rst  install.md  test-page.md
docs/.bundle/: config
docs/modules/: index.rst
example_data/folders/logs_AB12C/: carwatch_ab12c_20191205.csv
example_data/folders/logs_DE34F/: carwatch_de34f_20191205.csv
example_data/folders/logs_GH56I/: carwatch_gh56i_20191205.csv
examples/: Log_Data_Example.ipynb  README.rst
tests/: test_logs.py  test_qr_codes.py
tests/test_data/correct/folders/: test.txt
tests/test_data/corrupt/logs_AB12C/: carwatch_ab12c_20191205.csv
tests/test_data/corrupt/logs_DE34F/: carwatch_de34f_20191205.csv
tests/test_data/missing_awakening/logs_AB12C/: carwatch_ab12c_20191207.csv
tests/test_data/missing_samples/logs_AB12C/: carwatch_ab12c_20191205.csv  carwatch_ab12c_20191207.csv
